# janitor

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: janitor.1
scripts/: package.sh
src/: access.rs  acl.rs  aclcmd.rs  attr.rs  audit.rs  backup.rs  batch.rs  chperm.rs  cli.rs  commands.rs  compare.rs  completions.rs  config.rs  diffcmd.rs  errors.rs  explain.rs  find.rs  groups.rs  helpers.rs  info.rs  locking.rs  locks.rs  main.rs  matcher.rs  perms.rs  policy.rs  presets.rs  prune.rs  render.rs  seal.rs  snapshot.rs  tree.rs  types.rs  users.rs  whocan.rs
tests/: Dockerfile  smoke-test.sh
